# cybersecuritytools

./: .gitignore  .secrets.baseline  CODEOWNERS  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: pythonpackage.yml
cybersecuritytools/: cst.py
cybersecuritytools/aws/: ssm.py
cybersecuritytools/aws_permissions_helper/: README.md  aws_requests.py
cybersecuritytools/csls/: accounts_loggroup_index_test.toml  accountstoml.py  accountstoml_test.py  cli.py  hec_index_checker.py
cybersecuritytools/csls/generate_cloudwatch_logs/: cli.py  put_cloudwatch_logs.py  query_splunk.py  test_put_cloudwatch_logs.py  test_query_splunk.py
cybersecuritytools/csls/hec_index_checker/: README.md  cli.py  hec_index_checker.py
cybersecuritytools/flask_auth/: README.md  alb.py  auth.py  setup.py  static_site_wrapper_app.py
cybersecuritytools/flask_auth/flask_auth/: alb.py  lambda_handler.py
cybersecuritytools/flask_auth/templates/: denied.html
cybersecuritytools/flaskauth/: README.md  alb.py  auth.py  auth_test.py  config.py  config_test.py  conftest.py  lambda_handler_test.py  oidc_client.py  oidc_client_test.py  setup.py  static_site_wrapper_app.py  static_site_wrapper_app_test.py
cybersecuritytools/flaskauth/flaskauth/: alb.py  alb_test.py  auth.py  auth_test.py  config.py  config_test.py  conftest.py  lambda_handler.py  (+6 more)
cybersecuritytools/jsonlogger/: __init__.py  setup.py
cybersecuritytools/logger/: README.md  setup.py
cybersecuritytools/splunk/: api.py  api_test.py  conftest.py  credentials.py  search.py  x509.py  x509_test.py
python/: Makefile
(+21 files in other folders)
